@@ -34,6 +34,7 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
 
       </Grid.RowDefinitions>
       
@@ -72,7 +73,6 @@
         TextWrapping="Wrap"
         />
 
-
       <ComboBox 
         Grid.Row="3" Grid.Column="2"
         ItemsSource="{Binding Source={local:Enumeration {x:Type model:SyntaxHighlightingStyle}}}" 
@@ -82,6 +82,7 @@
         FontSize="14"
         Height="30"/>
 
+      
       <TextBlock 
         Grid.Row="4" Grid.Column="0"
         Text="Application Theme" 
@@ -101,15 +102,33 @@
         Margin="0,10,0,0"/>
 
 
+      <TextBlock 
+        Grid.Row="5" Grid.Column="0"
+        Text="Font" 
+        Style="{StaticResource SettingGroupHeaderStyle}"
+        TextWrapping="Wrap"
+        Margin="0,10,0,0"
+        />
+
+      <ComboBox 
+        Grid.Row="5" Grid.Column="2"
+        ItemsSource="{Binding Source={x:Static Fonts.SystemFontFamilies}}" 
+        SelectedValue="{Binding FontFamily}"  
+        SelectedValuePath="Source"  
+        FontSize="14"
+        Height="30"
+        Margin="0,10,0,0"/>
+
+
 
       <TextBlock 
-        Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" 
+        Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" 
         Text="{Binding CurrentVersion, ElementName=ControlRoot, StringFormat='Current Version: {0}'}" 
         Style="{StaticResource SettingGroupHeaderStyle}"
         Margin="0,40,0,0"
         />
 
-      <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,40,0,0" Style="{StaticResource SettingGroupHeaderStyle}">
+      <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,40,0,0" Style="{StaticResource SettingGroupHeaderStyle}">
         <Run Text="Makes use of "/>
         <LineBreak/>
         <Run Text="  AvalonEdit"/>
